seafile/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seafile
spec:
  serviceName: seafile-service
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
      - name: seafile
        image: seafileltd/seafile-pro-mc:12.0.14-arm
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /shared
          name: seafile-storage
      volumes:
      - name: seafile-storage
        persistentVolumeClaim:
          claimName: seafile-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seafile-sdoc
spec:
  serviceName: seafile-sdoc-service
  replicas: 1
  selector:
    matchLabels:
      app: seafile-sdoc
  template:
    metadata:
      labels:
        app: seafile-sdoc
    spec:
      containers:
      - name: seafile
        image: seafileltd/sdoc-server:1.0.5-arm
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /opt/seadoc-data
          name: seafile-seadoc-storage
      volumes:
      - name: seafile-seadoc-storage
        persistentVolumeClaim:
          claimName: seafile-seadoc-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seafile-noti
spec:
  serviceName: seafile-noti-service
  replicas: 1
  selector:
    matchLabels:
      app: seafile-noti
  template:
    metadata:
      labels:
        app: seafile-noti
    spec:
      containers:
      - name: seafile
        image: seafileltd/notification-server:12.0.11-arm
        ports:
        - containerPort: 8083
        volumeMounts:
        - mountPath: /shared
          name: seafile-noti-storage
        - mountPath: /shared/logs
          name: seafile-noti-storage
          subPath: logs
      volumes:
      - name: seafile-noti-storage
        persistentVolumeClaim:
          claimName: seafile-noti-pvc
