seafile/service.yml
apiVersion: v1
kind: Service
metadata:
  name: seafile-service
spec:
  selector:
    app: seafile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-sdoc-service
spec:
  selector:
    app: seafile-sdoc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-noti-service
spec:
  selector:
    app: seafile-noti
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
