seafile/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile-route
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - drive.pmh.codes
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io
      backendRefs:
        - name: seafile-sdoc-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /sdoc-server/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: seafile-sdoc-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /notification/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: seafile-noti-service
          port: 8083
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seafile-service
          port: 80
